--- a/.github/workflows/draw.yml
+++ b/.github/workflows/draw.yml
@@ -4,7 +4,7 @@ on:
     branches:
       - ver2-akdk     # あなたのメインブランチ名に合わせてください
     paths:
-      - 'config/*.keymap'  # keymapファイルが更新された時だけ実行
+      - 'config/keymap.keymap'  # keymapファイルが更新された時だけ実行
       - 'config/*.yaml'    # 設定ファイルが更新された時も実行
 
 jobs:
